<resources>
    <string name="app_name">OtherProject</string>
    <string-array name="test_array">
        <item>BMI</item>
        <item>Vaccination Polio</item>
        <item>Vaccination Tetanus</item>
    </string-array>
    <string-array name="chart_array">
        <item>Pie Chart</item>
        <item>Bar Chart</item>
    </string-array>
    <string-array name="filter_array">
        <item>All</item>
        <item>Region 1</item>
        <item>Region 2</item>
        <item>Region 3</item>
        <item>Region 4</item>
        <item>Region 5</item>
        <item>Region 6</item>
        <item>Region 7</item>
        <item>Region 8</item>
        <item>Region 9</item>
        <item>Region 10</item>
        <item>Region 11</item>
        <item>Region 12</item>
    </string-array>
    <string-array name="conf_array">
        <item>99%</item>
        <item>95%</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_text">Update charts</string>
    <string name="title_activity_question_navi">QuestionNavi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="import_db">Import</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="load_dataset">Load Dataset 1</string>
    <string name="load_dataset2">Load Dataset 2</string>
    <string name="view_database">Dataset Visualization</string>
    <string name="question_text">Question </string>
    <string name="question_search">Search</string>
    <string name="message_string">Note: Pie charts\' "n" do not include invalidated records</string>
    <string name="zscore_note">Z-score is only based on the proportions of \'red\' slices</string>
    <string name="filter_ID">Filter ID</string>
    <string name="filter_group">Filter Group</string>
    <string name="ooto_mobile">OOTO Mobile</string>
</resources>
