<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="40dp"
            android:layout_height="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/question_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="@string/question_text"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/question_code"
                        android:layout_width="60dp"
                        android:layout_height="37dp"
                        android:textSize="14sp"
                        android:imeOptions="actionSearch"
                        android:inputType="text" />

                    <TextView
                        android:id="@+id/question_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:textSize="20dp"
                        android:text="Testint string"/>



                </LinearLayout>

                <Spinner
                    android:id="@+id/conf_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>



        </LinearLayout>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="vertical">

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">

                 <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="20dp"
                     android:layout_weight="1">

                     <TextView
                         android:id="@+id/leftDetails"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Test"/>

                 </RelativeLayout>

                 <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="20dp"
                     android:layout_weight="1">

                     <TextView
                         android:id="@+id/rightDetails"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="testing2"/>

                 </RelativeLayout>
             </LinearLayout>

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">

                 <RelativeLayout
                     android:id="@+id/graph_container_left"
                     android:layout_width="0dp"
                     android:layout_height="350dp"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentTop="true"
                     android:layout_weight="1">


                 </RelativeLayout>

                 <RelativeLayout
                     android:id="@+id/graph_container_right"
                     android:layout_width="0dp"
                     android:layout_height="350dp"
                     android:layout_weight="1">

                 </RelativeLayout>
             </LinearLayout>
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="20dp"/>

             <TextView
                 android:id="@+id/result_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="18dp"
                 android:layout_gravity="center"/>


             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:orientation="horizontal">

                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:onClick="prevSkip"
                     android:text="Skip to OOTO(Prev)"/>
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:onClick="nextSkip"
                     android:text="Skip to OOTO(Next)"/>
             </RelativeLayout>


             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:orientation="horizontal">

                 <Button
                     android:id="@+id/prev_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:onClick="prevView"
                     android:text="@string/prev" />
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:orientation="vertical">

                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
                         android:textSize="16sp"
                         android:text="@string/message_string" />

                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
                         android:textSize="16sp"
                         android:text="@string/zscore_note"/>

                 </LinearLayout>



                 <Button
                     android:id="@+id/next_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:onClick="nextView"
                     android:text="@string/next" />

             </RelativeLayout>
         </LinearLayout>




    </LinearLayout>






</LinearLayout>
